@@ -1,3 +1,8 @@
+2004-03-27  Dom Lachowicz <cinamod@hotmail.com>
+
+	* moz-plugin.c: Support a few additional "mime types" for SVG.
+	Apparently, Adobe returns image/svg-xml...
+	
 2004-03-25  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-styles.c: bug 138084
